--- a/package.json
+++ b/package.json
@@ -5,21 +5,25 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js",
     "bundle": "webpack"
   },
   "author": "Valentin Alejandro Ruiz Ortiz",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "passport": "^0.3.2",
     "path": "^0.12.7",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
     "@types/file-saver": "0.0.1",
-    "babel": "^6.23.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.0.0",
     "babel-preset-es2015": "^6.24.1",
