--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "path": "^0.12.7",
     "react": "^15.6.0",
+    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
