--- a/package.json
+++ b/package.json
@@ -13,15 +13,16 @@
   "dependencies": {
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
+    "material-ui": "^0.18.3",
     "nodemon": "^1.11.0",
     "passport": "^0.3.2",
     "path": "^0.12.7",
     "react": "^15.6.0",
-    "react-bootstrap": "^0.31.0",
     "react-dom": "^15.6.0",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "semantic-ui-react": "^0.68.5",
     "webpack": "^2.6.1"
   },
   "devDependencies": {
