--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Valentin Alejandro Ruiz Ortiz",
   "license": "ISC",
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
     "material-ui": "^0.18.3",
@@ -19,9 +20,15 @@
     "path": "^0.12.7",
     "react": "^15.6.0",
     "react-dom": "^15.6.0",
+    "react-recaptcha": "^2.3.2",
+    "react-redux": "^5.0.5",
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.7.0",
+    "redux-logger": "^3.0.6",
+    "redux-promise-middleware": "^4.3.0",
+    "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.68.5",
     "webpack": "^2.6.1"
   },
